[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/worlds/scripts/chest.gd" type="Script" id=1]
[ext_resource path="res://assets/protoype/prototype-chest.png" type="Texture" id=2]
[ext_resource path="res://assets/themes/crafting_menu_theme.tres" type="Theme" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="chest" type="Area2D" groups=[
"map_save",
]]
monitorable = false
collision_layer = 0
script = ExtResource( 1 )

[node name="prototype-chest" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 0, -8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="overlay" type="Control" parent="CanvasLayer"]
visible = false
light_mask = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )

[node name="container" type="Panel" parent="CanvasLayer/overlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -40.0
margin_right = 48.0
margin_bottom = 40.0

[node name="items_list" type="ItemList" parent="CanvasLayer/overlay/container"]
light_mask = 0
anchor_left = 0.083
anchor_top = 0.312
anchor_right = 0.917
anchor_bottom = 0.912
margin_left = 0.0319996
margin_top = 0.039999
margin_right = -0.0320053
margin_bottom = 0.0399933
rect_min_size = Vector2( 80, 48 )
fixed_icon_size = Vector2( 16, 16 )

[node name="label" type="Label" parent="CanvasLayer/overlay/container"]
anchor_right = 1.0
anchor_bottom = 0.3
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
text = "CHEST"
align = 1
valign = 1
[connection signal="body_entered" from="." to="." method="_on_chest_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_chest_body_exited"]
[connection signal="item_activated" from="CanvasLayer/overlay/container/items_list" to="." method="_on_items_list_item_activated"]
